<resources>
    <string name="app_name">Mobile Computing Laboratory App</string>
    <string name="label_accelerometer">Accelerometer: x=%1$.2f, y=%2$.2f, z=%3$.2f</string>
    <string name="label_prediction">Prediction</string>
    <string name="label_record">Record Activities</string>
    <string name="label_prediction_status_disabled">No prediction available yet</string>
    <string name="label_position_not_evaluated">The position hasn\'t been evaluated yet</string>
    <string name="label_room_not_evaluated">The room hasn\'t been evaluated yet</string>
    <string name="label_record_status_disabled">Recording stopped</string>
    <string name="label_log_default">Logging area</string>
    <string name="label_direction_default">Direction:</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="radio_sitting">Sitting</string>
    <string name="radio_standing">Standing</string>
    <string name="radio_walking">Walking</string>
    <string name="radio_upstairs">Upstairs</string>
    <string name="radio_downstairs">Downstairs</string>
    <string name="radio_jogging">Jogging</string>
    <string name="btn_record">Record</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_record_default_text">ToggleButton</string>
    <string name="title_activity_monitoring">Activity Monitoring</string>
    <string name="title_indoor_localization">Indoor Localization</string>
    <string name="title_back">Back to Menu</string>
    <string name="title_activity_wifi">WifiActivity</string>
    <string name="title_wifi_scanner">WiFi Scanner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_settings_step_length">step length (in mm)</string>
    <string name="label_settings_step_periode">step periode (in ms)</string>
    <string name="label_settings_direction_offset">direction offset (in °)</string>
    <string name="label_settings_length_uncertainty">length uncertainty (in %)</string>
    <string name="label_settings_direction_uncertainty">direction uncertainty (in °)</string>
    <string name="label_settings_low_variance_resampling">Low-variance Particle Resampling</string>
    <string name="label_settings_manual_direction">Manual Direction Input</string>
    <string name="label_settings_compass_true_north">Compass Visualization Direction/North</string>
    <string name="switch_manual_magnetometer_1">manual mode is enabled</string>
    <string name="switch_manual_magnetometer_2">magnetometer mode is enabled</string>
    <string name="switch_particles_low_variance_resampling_1">low-variance resampling is enabled</string>
    <string name="switch_particles_low_variance_resampling_2">random particle resampling is enabled</string>
    <string name="switch_compass_direction_true_north_1">compass points in walking direction</string>
    <string name="switch_compass_direction_true_north_2">compass points to north</string>
</resources>