<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IndoorLocalization"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_indoor_localization">

    <Button
        android:id="@+id/btnClearImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="clear Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <ImageView
        android:id="@+id/imageViewFloorplan"
        android:layout_width="123dp"
        android:layout_height="429dp"
        android:adjustViewBounds="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/floorplan" />


    <TextView
        android:id="@+id/textDirection"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:text="@string/label_direction_default"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.850" />

    <TextView
        android:id="@+id/textPrediction"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:text="@string/label_prediction_status_disabled"
        android:textAlignment="textStart"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="@+id/textDirection"
        app:layout_constraintTop_toBottomOf="@+id/textDirection"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textPosition"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginStart="0dp"
        android:text="@string/label_position_not_evaluated"
        android:textAlignment="textStart"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="@+id/textPrediction"
        app:layout_constraintTop_toBottomOf="@+id/textPrediction"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textRoom"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="0dp"
        android:text="@string/label_room_not_evaluated"
        android:textAlignment="textStart"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="@+id/textPrediction"
        app:layout_constraintTop_toBottomOf="@+id/textPosition"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnDrawRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="drawRooms"
        app:layout_constraintStart_toStartOf="@+id/btnClearImage"
        app:layout_constraintTop_toBottomOf="@+id/btnClearImage" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="292dp"
        android:background="#FF5722"
        android:text="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewFloorplan" />


    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:background="#FF5722"
        android:text="@string/btn_stop"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:background="#FF5722"
        android:text="@string/btn_reset"
        app:layout_constraintStart_toStartOf="@+id/btnStop"
        app:layout_constraintTop_toBottomOf="@+id/btnStop" />

    <ImageView
        android:id="@+id/imageViewCompassNeedle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/compass_needle" />

    <SeekBar
        android:id="@+id/directionSeekBar"
        android:layout_width="337dp"
        android:layout_height="32dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>