<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Settings"
    tools:showIn="@layout/activity_settings">



    <TextView
        android:id="@+id/textStepLength"
        android:layout_width="258dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_settings_step_length"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="start|top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextStepLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textStepLength"
        app:layout_constraintTop_toBottomOf="@+id/textStepLength" />

     <TextView
        android:id="@+id/textStepPeriode"
        android:layout_width="258dp"
        android:layout_height="20dp"
        android:layout_marginTop="68dp"
        android:text="@string/label_settings_step_periode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="start|top"
        app:layout_constraintStart_toStartOf="@+id/textStepLength"
        app:layout_constraintTop_toTopOf="@+id/editTextStepLength" />


    <EditText
        android:id="@+id/editTextStepPeriode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextStepLength"
        app:layout_constraintTop_toBottomOf="@+id/textStepPeriode" />

     <TextView
        android:id="@+id/textDirectionOffset"
        android:layout_width="258dp"
        android:layout_height="20dp"
        android:layout_marginTop="68dp"
        android:text="@string/label_settings_direction_offset"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="start|top"
        app:layout_constraintStart_toStartOf="@+id/textStepPeriode"
        app:layout_constraintTop_toTopOf="@+id/editTextStepPeriode" />


    <EditText
        android:id="@+id/editTextDirectionOffset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="@+id/editTextStepPeriode"
        app:layout_constraintTop_toBottomOf="@+id/textDirectionOffset" />

    <TextView
        android:id="@+id/textEnableStatistical"
        android:layout_width="258dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/label_settings_low_variance_resampling"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="start|top"
        app:layout_constraintStart_toStartOf="@+id/textStepLength"
        app:layout_constraintTop_toBottomOf="@+id/editTextDirectionOffset" />


    <Switch
        android:id="@+id/switchStatistical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEnableStatistical" />


    <TextView
        android:id="@+id/textEnableManualDirection"
        android:layout_width="258dp"
        android:layout_height="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_settings_manual_direction"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="start|top"
        app:layout_constraintStart_toStartOf="@+id/textEnableStatistical"
        app:layout_constraintTop_toBottomOf="@+id/textEnableStatistical" />

    <Switch
        android:id="@+id/switchManualDirection"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEnableManualDirection" />

    <TextView
        android:id="@+id/textCompassTrueNorth"
        android:layout_width="258dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_settings_compass_true_north"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="start|top"
        app:layout_constraintStart_toStartOf="@+id/textEnableManualDirection"
        app:layout_constraintTop_toBottomOf="@+id/textEnableManualDirection" />

    <Switch
        android:id="@+id/switchCompassTrueNorth"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textCompassTrueNorth" />


</android.support.constraint.ConstraintLayout>